--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,32 @@
-asgiref==3.6.0
-dj-database-url==1.2.0
-Django==4.1.4
-django-database-url==1.0.3
-gunicorn== 20.1.0
-psycopg2==2.9.5
-sqlparse==0.4.3
+annotated-types==0.6.0
+anyio==4.3.0
+asgiref==3.8.1
+certifi==2024.2.2
+charset-normalizer==3.3.2
+colorama==0.4.6
+distro==1.9.0
+dj-database-url==2.1.0
+Django==5.0.4
+django-cors-headers==4.3.1
+django-environ==0.11.2
+django-extensions==3.2.3
+django_csp==3.8
+gunicorn==22.0.0
+h11==0.14.0
+httpcore==1.0.5
+httpx==0.27.0
+idna==3.7
+install==1.3.5
+openai==1.24.0
+packaging==24.0
+pillow==10.3.0
+psycopg2==2.9.9
+pydantic==2.7.1
+pydantic_core==2.18.2
+requests==2.31.0
+sniffio==1.3.1
+sqlparse==0.5.0
+tqdm==4.66.2
+typing_extensions==4.11.0
+tzdata==2024.1
+urllib3==2.2.1
